counters-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counters
  name: counters
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: counters
    weight: null
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
